@@ -852,9 +852,9 @@ int init_tcpip_plugin() {
         exit(0);
     }
     /////////////////////////////////////////////
-    /////////// INITILIZING PROTO_GOSMS //////////////////
-    if (!init_proto_gosms_struct()) {
-        fprintf(stderr, "Error initializing protocol proto_gosms\n Exiting\n");
+    /////////// INITILIZING PROTO_JEUXVIDEO //////////////////
+    if (!init_proto_jeuxvideo_struct()) {
+        fprintf(stderr, "Error initializing protocol PROTO_JEUXVIDEO\n Exiting\n");
         exit(0);
     }
     /////////////////////////////////////////////
