@@ -16,6 +16,8 @@ Version 1.6.9.1
 - Replace PROTO_MSCDN by PROTO_LEFIGARO
 - Update hostname for PROTO_LIMELIGHT: add new hostnames: limelight.com, llnw.net
 - Update PROTO_SCTP: add next protocols: PROTO_SCTP_INT, PROTO_SCTP_SACK, PROTO_SCTP_DATA
+- Replace PROTO_302_FOUND by PROTO_ZONE_TELECHARGEMENT
+- Replace PROTO_GOSMS by PROTO_JEUXVIDEO
 
 
 ## Version 1.6.9.0
